v1.11.2:
- Fixed Stagger bar to work in 8.0
- Fixed DK Runes in graphical mode not always correctly showing runes on cooldown (curse ticket 238, thanks ithorazei!)

v1.11.1:
- Fixed error when playing as a Monk
- Fixed castbar sometimes showing gibberish text and sometimes disappearing when the cast wasn't complete yet

v1.11.0:
- Updated TOC for 8.0

v1.10.18:
- BfA compatibility
- Added gap setting between upper and lower text (github pull request #1, thanks lrds!)
- Fixed Roll the Bones coloring when gaining 5 buffs.

v1.10.17:
- Fixed Insanity display with DogTags disabled
- Show text on Absorb and AltMana with DogTags disabled

v1.10.16.1:
- Added option to hide the raid icon for Info frames.
- Updated TOC for 7.3

v1.10.16:
- Updated shard texture for Warlocks.

v1.10.15.2:
- Updated shard display for Destro Warlocks (ticket #234, thanks stencil!).

v1.10.15.1:
- Fixed an error in IceHUD's usage of GetLFGProposal()'s return values exposed by the 7.2.5 Chromie quests.

v1.10.15:
- Fixed error on 7.2 due to a CVar being removed.
- Updated TOC for 7.2

v1.10.14:
- Fixed Holy Word: Serenity not being trackable in the Custom Cooldown module (ticket #232).
- Updated Stagger bar to allow the user to set the max to 100% if desired.

v1.10.13.1:
- Fixed "0" showing up for some users after 1.10.13 by adding a "show when zero" checkbox to custom counters (disabled by default). Anyone who has used IceHUD for a very long time has automatically-converted custom counter modules that replaced the old "maelstrom", "lacerate", and "sunder" modules that used to exist, each of which exhibited the behavior after the last update.

v1.10.13:
- Fixed alpha settings for spell charges on custom counter bars and stack counters to treat "full" the same way a Mana or Health bar would. Previously these treated "full" as "empty" for charges because that's how buff/debuff stacking should work (ticket #231).
- Fixed custom counters in numeric mode not hiding the count properly.

v1.10.12: