@@ -1,6 +1,7 @@
 v1.11.2:
 - Fixed Stagger bar to work in 8.0
 - Fixed DK Runes in graphical mode not always correctly showing runes on cooldown (curse ticket 238, thanks ithorazei!)
+- Renamed HarmonyPower module to Chi and moved saved settings over
 
 v1.11.1:
 - Fixed error when playing as a Monk
